# IA_engine

./: Cargo.toml  workspace.code-workspace
color_image_tiler/: Cargo.toml  simd_implementation_benchmark.sh
color_image_tiler/assets/: cube_150.glsl  cube_150_hard.glsl  cube_150_soft.glsl  cube_150_soft.glslf
color_image_tiler/src/: bench.rs  dataset_sample_service.rs  main.rs  seed.rs  stats_visualizer_thread.rs  tiler.rs  tiler_naive.rs  training_thread.rs
color_image_tiler/src/tiler/: color.rs  vec2.rs
engine/: Cargo.toml
engine/src/: dense_simd.rs  dual.rs  hybrid_simd.rs  lib.rs  simd_arr.rs  sparse_simd.rs  trainer.rs
engine/src/dual/: addition.rs  division.rs  extended_arithmetic.rs  multiplication.rs  multiply.rs  substraction.rs  tests.rs
engine/src/simd_arr/: dense_simd.rs  heap_hybrid_simd.rs  hybrid_simd.rs  sparse_simd.rs  vec_sparse_simd.rs
hello_world/src/: main.rs
image_compresor/: Cargo.toml
image_compresor/src/: compresor.rs  main.rs
image_tiler/: Cargo.toml
image_tiler/assets/: cube_150.glslf  cube_150_soft.glslf
image_tiler/src/: main.rs  stats_visualizer_thread.rs  tiler.rs  training_thread.rs
perceptron/: Cargo.toml
perceptron/src/: eval_thread.rs  main.rs  matrix.rs  mnist.rs  neuronal_network.rs
polinomials/: Cargo.toml
polinomials/src/: main.rs  piston_backend.rs  polinomial.rs
polinomials_benchmark/: Cargo.toml  benchmark.sh
polinomials_benchmark/src/: main.rs  polinomial.rs
src/: dual.rs  linear.rs  main.rs  matrix.rs  perceptron.rs  polinomial.rs
