[package]
name = "image_compresor"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]

ia_engine = { path = "../engine" } 

number_traits = "0.2.4"
piston = "1.0.0"
piston2d-graphics = "0.44.0"
piston_window = "0.132.0"
image = "0.25.1"
gfx = "0.18.1"
rand = "0.8.5"
shader_version = "0.7.0"

threadpool = "1.8.1"
rand_chacha = "0.3.1"