[package]
name = "image_compresor"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]

ia_engine = { path = "../engine" } 

piston = "1.0.0"
piston2d-graphics = "0.45.0"
piston_window = "0.132.0"
image = "0.25.2"
gfx = "0.18.1"
rand = "0.8.5"
shader_version = "0.7.0"

threadpool = "1.8.1"
rand_chacha = "0.3.1"