[package]
name = "polinomial_aproximation_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
plotters-backend = "0.3.5"
piston_window = "0.120.0"
ia_engine = { path = "../engine" } 